# qself-assistant

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
notebooks/: 20230708-explore.ipynb
