[tool.poetry]
name = "qself-assistant"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
packages = [{include = "qself_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.228"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
jupyterlab = "^4.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
